--- a/index.html
+++ b/index.html
@@ -12,9 +12,94 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<h2>Panda Commerce</h2>
 
 <body>
+    <!------------- Header starts --------------->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Backpacks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Subscribe</a>
+                        </li>
+
+                </div>
+            </div>
+        </nav>
+        <!------------ Slider -------------->
+        <section class="container my-5">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner bg-info bg-gradient rounded">
+                    <div class="carousel-item active">
+                        <div class="row d-flex align-items-center">
+                            <div class="col-lg-7 ps-5">
+                                <h2>Cool Dude Headphone</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque deleniti quos labore
+                                    iusto obcaecati recusandae nisi fugiat eaque ex consequatur.</p>
+                                <h2 class="text-danger">$420</h2>
+                                <button class="btn btn-danger">Buy now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img class="img-fluid p-3" src="images/banner-images/headphone.png" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center">
+                            <div class="col-lg-7 ps-5">
+                                <h2>Cool Dude Headphone</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque deleniti quos labore
+                                    iusto obcaecati recusandae nisi fugiat eaque ex consequatur.</p>
+                                <h2 class="text-danger">$1200</h2>
+                                <button class="btn btn-danger">Buy now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img class="img-fluid p-3" src="images/banner-images/tv.png" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center">
+                            <div class="col-lg-7 ps-5">
+                                <h2>Cool Dude Headphone</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque deleniti quos labore
+                                    iusto obcaecati recusandae nisi fugiat eaque ex consequatur.</p>
+                                <h2 class="text-danger">$580</h2>
+                                <button class="btn btn-danger">Buy now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img class="img-fluid p-3" src="images/banner-images/xbox.png" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
 
 
 
