--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpacks</a>
+                            <a class="nav-link" href="#backpack">Backpacks</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
 
                 </div>
             </div>
         </nav>
         <!------------ Slider -------------->
-        <section class="container my-5">
+        <section class="container my-5 py-5">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -56,42 +56,42 @@
                 <div class="carousel-inner bg-info bg-gradient rounded">
                     <div class="carousel-item active">
                         <div class="row d-flex align-items-center">
-                            <div class="col-lg-7 ps-5">
+                            <div class="col-lg-7 col-md-12 ps-5 pt-5">
                                 <h2>Cool Dude Headphone</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque deleniti quos labore
                                     iusto obcaecati recusandae nisi fugiat eaque ex consequatur.</p>
                                 <h2 class="text-danger">$420</h2>
                                 <button class="btn btn-danger">Buy now</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-md-12">
                                 <img class="img-fluid p-3" src="images/banner-images/headphone.png" alt="...">
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row d-flex align-items-center">
-                            <div class="col-lg-7 ps-5">
+                            <div class="col-lg-7 col-md-12 ps-5 pt-5">
                                 <h2>Cool Dude Headphone</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque deleniti quos labore
                                     iusto obcaecati recusandae nisi fugiat eaque ex consequatur.</p>
                                 <h2 class="text-danger">$1200</h2>
                                 <button class="btn btn-danger">Buy now</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-md-12">
                                 <img class="img-fluid p-3" src="images/banner-images/tv.png" alt="...">
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row d-flex align-items-center">
-                            <div class="col-lg-7 ps-5">
+                            <div class="col-lg-7 col-md-12 ps-5 pt-5">
                                 <h2>Cool Dude Headphone</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque deleniti quos labore
                                     iusto obcaecati recusandae nisi fugiat eaque ex consequatur.</p>
                                 <h2 class="text-danger">$580</h2>
                                 <button class="btn btn-danger">Buy now</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-md-12">
                                 <img class="img-fluid p-3" src="images/banner-images/xbox.png" alt="...">
                             </div>
                         </div>
@@ -100,6 +100,153 @@
             </div>
         </section>
     </header>
+    <!-------- mainbody starts here ---------->
+    <main>
+        <!----------- catagories ------------->
+        <section class="container">
+            <div class="row gy-5">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div
+                        class="px-4 py-2 border bg-primary d-flex align-items-center justify-content-between rounded-3">
+                        <h2 class="text-white">Watch</h2>
+                        <div>
+                            <img width="90" src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div
+                        class="px-4 py-2 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                        <h2 class="text-white">Backpacks</h2>
+                        <div>
+                            <img width="90" src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div
+                        class="px-4 py-2 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                        <h2 class="text-white">Shoes</h2>
+                        <div>
+                            <img width="90" src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!---------------- Shoes section ------------------>
+        <section class="container mt-5" id="shoes">
+            <h2>Shoes</h2>
+            <div class="row g-4">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="card h-100 text-center shadow-lg">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-align-center">Reebok Dart Men's Shoes</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer">
+                            <h2>$1289</h2>
+                            <button class="btn btn-danger">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="card h-100 text-center shadow-lg">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Reebok Pump</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="card-footer">
+                            <h2>$799</h2>
+                            <button class="btn btn-danger">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="card h-100 text-center shadow-lg">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Reebok All Terrain</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="card-footer">
+                            <h3>$699</h3>
+                            <button class="btn btn-danger">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!---------------- Backpack section ------------------>
+        <section class="container mt-5" id="backpack">
+            <h2>Backpacks</h2>
+            <div class="row g-4">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="card h-100 text-center shadow-lg">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-align-center">Ison Backpack</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer">
+                            <h2>$1289</h2>
+                            <button class="btn btn-danger">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="card h-100 text-center shadow-lg">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Biaowang Backpack</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="card-footer">
+                            <h2>$799</h2>
+                            <button class="btn btn-danger">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="card h-100 text-center shadow-lg">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Dxyizu WS54 Smart</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="card-footer">
+                            <h3>$699</h3>
+                            <button class="btn btn-danger">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!---------------- Subscribe section ------------------>
+        <section class="container d-flex justify-content-center align-items-center mt-5 bg-info rounded-3"
+            id="subscribe" style="height: 300px;">
+            <div class="d-flex flex-column align-items-center">
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales specials and more</p>
+                <input type="text" placeholder=" Enter Your E-mail" style="width: 300px;">
+                <button class="btn btn-warning d-block mt-2 rounded-3">Subscribe</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p class="text-center mt-5"><small>&copy; 2022, all rights reserved</small></p>
+    </footer>
 
 
 
