--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     ----------------------------------------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="custom-css/style.css">
 </head>
 
 <body>
@@ -53,7 +54,7 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                 </div>
-                <div class="carousel-inner bg-info bg-gradient rounded">
+                <div class="carousel-inner panda-bg-info bg-gradient rounded">
                     <div class="carousel-item active">
                         <div class="row d-flex align-items-center">
                             <div class="col-lg-7 col-md-12 ps-5 pt-5">
@@ -61,7 +62,7 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque deleniti quos labore
                                     iusto obcaecati recusandae nisi fugiat eaque ex consequatur.</p>
                                 <h2 class="text-danger">$420</h2>
-                                <button class="btn btn-danger">Buy now</button>
+                                <button class="btn panda-btn-buy-now">Buy now</button>
                             </div>
                             <div class="col-lg-5 col-md-12">
                                 <img class="img-fluid p-3" src="images/banner-images/headphone.png" alt="...">
@@ -75,7 +76,7 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque deleniti quos labore
                                     iusto obcaecati recusandae nisi fugiat eaque ex consequatur.</p>
                                 <h2 class="text-danger">$1200</h2>
-                                <button class="btn btn-danger">Buy now</button>
+                                <button class="btn panda-btn-buy-now">Buy now</button>
                             </div>
                             <div class="col-lg-5 col-md-12">
                                 <img class="img-fluid p-3" src="images/banner-images/tv.png" alt="...">
@@ -89,7 +90,7 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque deleniti quos labore
                                     iusto obcaecati recusandae nisi fugiat eaque ex consequatur.</p>
                                 <h2 class="text-danger">$580</h2>
-                                <button class="btn btn-danger">Buy now</button>
+                                <button class="btn panda-btn-buy-now">Buy now</button>
                             </div>
                             <div class="col-lg-5 col-md-12">
                                 <img class="img-fluid p-3" src="images/banner-images/xbox.png" alt="...">
@@ -149,7 +150,7 @@
                         </div>
                         <div class="card-footer">
                             <h2>$1289</h2>
-                            <button class="btn btn-danger">Buy Now >></button>
+                            <button class="btn panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -163,7 +164,7 @@
                         </div>
                         <div class="card-footer">
                             <h2>$799</h2>
-                            <button class="btn btn-danger">Buy Now >></button>
+                            <button class="btn panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -178,7 +179,7 @@
                         </div>
                         <div class="card-footer">
                             <h3>$699</h3>
-                            <button class="btn btn-danger">Buy Now >></button>
+                            <button class="btn panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -198,7 +199,7 @@
                         </div>
                         <div class="card-footer">
                             <h2>$1289</h2>
-                            <button class="btn btn-danger">Buy Now >></button>
+                            <button class="btn panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -212,7 +213,7 @@
                         </div>
                         <div class="card-footer">
                             <h2>$799</h2>
-                            <button class="btn btn-danger">Buy Now >></button>
+                            <button class="btn panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -227,20 +228,20 @@
                         </div>
                         <div class="card-footer">
                             <h3>$699</h3>
-                            <button class="btn btn-danger">Buy Now >></button>
+                            <button class="btn panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <!---------------- Subscribe section ------------------>
-        <section class="container d-flex justify-content-center align-items-center mt-5 bg-info rounded-3"
+        <section class="container d-flex justify-content-center align-items-center mt-5 panda-bg-info rounded-3"
             id="subscribe" style="height: 300px;">
             <div class="d-flex flex-column align-items-center">
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales specials and more</p>
-                <input type="text" placeholder=" Enter Your E-mail" style="width: 300px;">
-                <button class="btn btn-warning d-block mt-2 rounded-3">Subscribe</button>
+                <input class="form-control" type="text" placeholder=" Enter Your E-mail">
+                <button class="btn panda-btn-buy-now d-block mt-2 rounded-3">Subscribe</button>
             </div>
         </section>
     </main>
